# roboai

./: .gitignore  README.md  docker-compose.yml  get_sim_images  justfile
.github/workflows/: main.yml
agent_frameworks/autogen_roboai/: Dockerfile  pyproject.toml
agent_frameworks/autogen_roboai/autogen_roboai/: test.py
agent_frameworks/crewai_roboai/crewai_roboai/: test.py
agent_frameworks/langroid_roboai/: Dockerfile  pyproject.toml
agent_frameworks/langroid_roboai/langroid_roboai/: test.py
autogen_roboai/: OAI_CONFIG_LIST
autogen_roboai/.cache/41/: cache.db
crewai_roboai/: pyproject.toml
data_gen/: pyproject.toml
data_gen/data_gen/: generate_tables_graphs.py  idefics_prompter.py  minicpm_prompter.py  paligemma_prompter.py  parse_seg_imgs.py  phi-vision_prompter.py  replicator_random_ycb_table.py  replicator_random_ycb_table_v2.py
franka_moveit/: Dockerfile  fastdds.xml  isaac_demo.launch.py  ros_entrypoint.sh
franka_moveit/config/: panda_moveit_config.rviz
franka_moveit/moveit_resources_panda/: panda_hand.ros2_control.xacro
grasp_server/: Dockerfile
grasp_server/app/: main.py
grasp_server/data/config/: test.ini
grasp_server/grasp_server/: grasp.py  grasp_det_seg.py  test_grasp_det_seg.py
grasping/grasp_server/: README.md  pyproject.toml
grasping/grasp_server/app/: main.py
grasping/grasp_server/grasp_server/: grasp_det_seg.py  test_grasp_det_seg.py
grasping/robotic_grasping_server/: Dockerfile
grasping/robotic_grasping_server/app/: main.py
grasping/robotic_grasping_server/robotic_grasping_server/: robotic_grasping.py
grasping/scale_balanced_grasp/: Dockerfile  pyproject.toml
isaac_sim/: Dockerfile  README.md  pyproject.toml  test.py
isaac_sim/app/: main.py
isaac_sim/humble_ws/src/data_gen/: package.xml  setup.cfg  setup.py
isaac_sim/humble_ws/src/data_gen/data_gen/: object_sorter.py
isaac_sim/humble_ws/src/data_gen/launch/: object_sorter.launch.py
isaac_sim/humble_ws/src/grasps_ros/: package.xml  setup.cfg  setup.py
isaac_sim/humble_ws/src/grasps_ros/grasps_ros/: image_processor.py
isaac_sim/humble_ws/src/grasps_ros/launch/: image_processor.launch.py
isaac_sim/humble_ws/src/isaac_tutorials/scripts/: ros2_publisher.py
isaac_sim/humble_ws/src/navigation/isaac_ros_navigation_goal/: setup.py
isaac_sim/humble_ws/src/roboai_interfaces/: CMakeLists.txt  package.xml
isaac_sim/humble_ws/src/roboai_interfaces/action/: ControlGripper.action  GetGrasp.action  MoveArm.action
isaac_sim/humble_ws/src/robot_api/: package.xml  setup.cfg  setup.py
isaac_sim/humble_ws/src/ros_utils/: package.xml  setup.cfg  setup.py
isaac_sim/isaac_sim/: enums.py  planner.py  quick_start.py  replicator_test.py  robosim.py  robot.py  standalone_stream.py  standalone_stream_server.py  tasks.py  test.py  test_nb.ipynb
isaac_sim/omniverse_patch/: nucleus.py
langroid_roboai/langroid_roboai/: test.py
langroid_roboai/logs/: Robot.tsv
minedojo_sim/: Dockerfile  pyproject.toml
minedojo_sim/patches/: build.gradle
model_server/: Dockerfile  pyproject.toml
model_server/app/: main.py
model_server/model_server/: hf_cerule.py  hf_idefics.py  hf_moondream2.py  hf_mxbai_embed.py  hf_nanollava.py
model_training/: .gitignore  Dockerfile  pyproject.toml
model_training/model_training/: data.py  eval.py  moondream2_finetuning.py
model_training/model_training/conf/: config.yaml  eval_config.yaml
model_training/model_training/models/: moondream2_2024-04-02.py  moondream2_2024-05-20.py
omnigibson/: .gitignore  run_docker.sh
omnigibson/roboai/: primitive_patches.py  roboai.py  tiago_primitives.yaml  visualize_scene_graph.py
roboai/: .gitignore  Dockerfile  pyproject.toml
roboai/roboai/: agent.py  compare_null.py  knowledge_base_utils.py  main.py  parse_images.py  plans.py  roboai.py  roboai_demo.py  role_context.py  semantic_locations.py  skills.py  streamlit_app.py  task.py  test.py
roboai/roboai/utils/: http_client.py  robosim_client.py
robomimic_sim/: Dockerfile  pyproject.toml
robomimic_sim/app/: main.py
robomimic_sim/robomimic_sim/: main.py  robomimic_sim.py  run_policy.py  train_bc_rnn.py
robosim/: Dockerfile  Dockerfile.gpu  pyproject.toml
robosim/app/: main.py
robosim/robosim/: camera.py  grasp_handler.py  main.py  quick_start.py  robosim.py  robot.py  task.py
robosuite/robomimic_sim/app/: main.py
robosuite/robomimic_sim/robomimic_sim/: train_bc_rnn.py
robosuite/robosim/: Dockerfile  entrypoint.sh
robosuite/robosim/app/: main.py
robosuite/robosim/robosim/: grasp_handler.py  robosim.py  robot.py  task.py
robotic_grasping_server/: pyproject.toml
robotic_grasping_server/app/: main.py
robotic_grasping_server/robotic_grasping_server/: robotic_grasping.py
shared/: .gitignore  get_sim_images  pyproject.toml
shared/scripts/: generate_tables_graphs.py  idefics-awq_prompter.py  idefics_prompter.py  llava_prompter.py  llava_test.py  minicpm_prompter.py  moondream_prompter.py  moondream_test_v2.py  null_0-1.py  paligemma_prompter.py  parse_images.py  parse_seg_imgs.py  parse_seg_imgs_v2.py  phi-vision_prompter.py  replicator_random_ycb_table.py  replicator_random_ycb_table_v2.py  replicator_test_v3.py  score_responses.py
shared/utils/: gradio_client.py  grasp_client.py  http_client.py  huggingface_client.py  image_utils.py  isaacsim_client.py  llm_utils.py  model_server_client.py  omnigibson_client.py  replicate_client.py  robosim_client.py  robotic_grasping_client.py
(+16 files in other folders)
