[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["Ashis Ghosh <ashisghosh94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
transformers = "^4.41.2"
timm = "^1.0.3"
einops = "^0.8.0"
datasets = "^2.20.0"
bitsandbytes = "^0.43.1"
accelerate = "^0.31.0"
peft = "^0.11.1"
hf-transfer = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
