[tool.poetry]
name = "roboai"
version = "0.1.0"
description = ""
authors = ["AshisGhosh <ashisghosh@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.34.16"
langfuse = "^2.21.1"
burr = {version = "0.15.1", extras = ["start", "streamlit"]}
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
