[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["AshisGhosh <ashisghosh@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
litellm = "^1.34.22"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
ollama = "^0.1.8"
gradio-client = "^0.15.1"
sentence-transformers = "^2.6.1"
replicate = "^0.25.1"
pandas = "^2.2.2" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
