[tool.poetry]
name = "langroid-roboai"
version = "0.1.0"
description = ""
authors = ["AshisGhosh <ashisghosh@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9.1"
langroid = {extras = ["litellm"], version = "^0.1.222"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
