[tool.poetry]
name = "grasp-server"
version = "0.1.0"
description = ""
authors = ["AshisGhosh <ashisghosh@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.103.2"
uvicorn = "0.22.0"
python-multipart = "0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
